--- a/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.html
@@ -23,13 +23,14 @@
             [matDatepicker]="picker"
             formControlName="fecha"
             [min]="minFecha"
+            readonly="true"
           />
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle
             matIconSuffix
             [for]="picker"
           ></mat-datepicker-toggle>
-          <mat-datepicker #picker ></mat-datepicker>
+          <mat-datepicker #picker></mat-datepicker>
           <mat-error *ngIf="obtenerControlCampo('fecha')?.errors?.['required']">
             La fecha de creacion es obligatoria.
           </mat-error>
