--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.html
@@ -111,7 +111,9 @@
                 *ngFor="let p of listaHorarioEst"
                 [value]="p.idHorarioEstacionamiento"
               >
-                {{ p.idHorarioEstacionamiento }}
+                {{ p.estacionamiento.localizacion.direccion }} {{ " - " }}
+                {{ p.horario.fecha }}{{ " ( " }} {{ p.horario.horaApertura }}
+                {{ " - " }}{{ p.horario.horaCierre }}{{ " ) " }}
               </mat-option>
             </mat-select>
             <mat-error
