--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.html
@@ -26,7 +26,7 @@
         </mat-form-field>
 
         <mat-form-field class="example-full-width">
-          <mat-label> <mat-icon>tab</mat-icon> Descripcion </mat-label>
+          <mat-label>Descripcion </mat-label>
           <input
             matInput
             placeholder="Descripcion"
