--- a/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/vehiculos/creaedita-vehiculos/creaedita-vehiculos.component.css
@@ -97,14 +97,20 @@ button{
 }
 
 /* Additional styling for the uploaded image */
-img {
+
+.image-upload {
   max-width: 90%;
-  max-height: 50%;
+  max-height: 90%;
+  margin: 0 20px;
+}
+
+/* Additional styling for the uploaded image */
+img {
+  max-width: 40%;
+  max-height: 40%;
   margin-top: 10px;
-  margin: 10px;
 
 }
 input[type="file"] {
   background-color: rgb(173, 173, 182);
 }
-
