--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -9,7 +9,7 @@
     <app-navbar-administrador></app-navbar-administrador>
 
     <div class="container" style="text-align: center">
-      <form [formGroup]="form" (submit)="registrar()" class="example-form">
+      <form [formGroup]="form" (submit)="registrar()" class="example-form" enctype="multipart/form-data">
         <h2>Registro de Estacionamiento</h2>
 
         <div class="formularios">
