Guardado de imagenes Estacionamiento

--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/creaedita-estacionamiento/creaedita-estacionamiento.component.html
@@ -162,6 +162,8 @@
                 class="example-full-width"
                 type="file"
                 (change)="onFileSelected($event)"
+                type="file" 
+                alife-file-to-base64  
                 accept="image/*"
                 formControlName="imagenVehiculo"
               />
