--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.css
@@ -18,20 +18,30 @@ h2 {
 
 .estacionamiento-card {
     width: 300px;
-    height: auto;
+    height: 400px;
     margin: 16px;
-    background-size: cover;
-    background-position: center;
     position: relative;
     border-radius: 13px;
     overflow: hidden; /* Para evitar que los bordes redondeados afecten la imagen */
     transition: transform 0.3s; /* Agrega transición al efecto hover */
-    
 }
+
+.estacionamiento-card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-top-left-radius: 13px;
+    border-top-right-radius: 13px;
+    max-width: 100%; /* Asegura que la imagen no sea más ancha que su contenedor */
+    max-height: 100%; /* Asegura que la imagen no sea más alta que su contenedor */
+}
+
 .estacionamiento-card:hover {
     transform: scale(1.05); /* Ajusta el tamaño en el hover según tus preferencias */
-    cursor:pointer;
+    cursor: pointer;
 }
+
+
 /* Agrega estilos para posicionar el botón en la esquina derecha superior */
 .favorite-button {
     position: absolute;
@@ -46,6 +56,8 @@ h2 {
 .imagen-por-defecto {
     border-top-left-radius: 13px;
     border-top-right-radius: 13px;
+    width: 300px;
+    height: 250px;
 }
 
 /* Aplica bordes redondeados y ancho del 50% al contenedor de búsqueda */
