--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.html
@@ -21,14 +21,16 @@
 
     <div class="estacionamientos-container">
       <!-- Itera sobre los estacionamientos y muestra cada uno como una tarjeta -->
-      <mat-card *ngFor="let estacionamiento of dataSource.data" class="estacionamiento-card" [routerLink]="['/detalle-estacionamiento', estacionamiento.idEstacionamiento]">
+      <mat-card *ngFor="let estacionamiento of dataSource.data" class="estacionamiento-card"
+        [routerLink]="['/detalle-estacionamiento', estacionamiento.idEstacionamiento]">
         <button mat-icon-button class="favorite-button">
           <mat-icon>favorite</mat-icon>
         </button>
-      
+
         <!-- Utiliza la directiva [src] para asignar la URL de la imagen -->
-        <img mat-card-image [src]="getImagenUrl(estacionamiento)" (error)="imagenNoCargada($event)" alt="Foto del estacionamiento" class="imagen-por-defecto" />
-        
+        <img mat-card-image [src]="getImagenUrl(estacionamiento)" (error)="imagenNoCargada($event)"
+          alt="Foto del estacionamiento" class="imagen-por-defecto" />
+
         <mat-card-header>
           <mat-card-title>
             <p>{{ estacionamiento.localizacion.distrito}}, {{ estacionamiento.localizacion.region}}</p>
@@ -36,13 +38,17 @@
           <mat-card-subtitle>{{ estacionamiento.tipoEstacionamiento }}</mat-card-subtitle>
           <mat-card-subtitle>{{ estacionamiento.disponibilidad ? 'Disponible' : 'No disponible' }}</mat-card-subtitle>
         </mat-card-header>
-      
+
         <mat-card-content>
           <p>S/. {{ estacionamiento.precio }} /hora</p>
         </mat-card-content>
       </mat-card>
-      
+
     </div>
+    <button class="mostrar-mapa-button"
+      [routerLink]="['/components/localizaciones/listar_usuario_localizaciones']">Mostrar Mapa<mat-icon>
+        map</mat-icon></button>
+
   </div>
 </body>
 
