--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.css
@@ -1,93 +1,75 @@
-/* Styles for the card container */
+/* Estilos globales */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background: linear-gradient(to right, #11998e, #38ef7d),
-              url('https://img.freepik.com/fotos-premium/central-park-hermoso-contraste-rascacielos-edificios-manhattan-nueva-york-ee-uu_71337-684.jpg?w=360');
-  background-size: cover;
-  color: #080808;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(to right, #11998e, #38ef7d);
+  color: #333;
   margin-left: 250px;
-  padding: 100px;
-  height: auto;
+  height: 1500px;
 
 }
 
-/* Styles for the individual card */
-.card {
-  width: 300px; /* Set the width as per your design */
-  margin: 15px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  transition: box-shadow 0.3s;
-}
-
-.card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-/* Styles for the card header */
-.card-header {
-  background-color: #f0f0f0;
-  padding: 10px;
+/* Contenedor principal */
+.container {
+  max-width: 500px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
   text-align: center;
-  border-bottom: 1px solid #ccc;
-  border-radius: 8px 8px 0 0;
 }
 
-/* Styles for the card body */
-.card-body {
-  padding: 15px;
-}
-
-/* Styles for the card footer */
-/* Style the "Agregar" button */
-.card-footer button {
-  background-color: #11998e; /* Change the background color as desired */
-  color: rgb(17, 16, 16); /* Text color */
-  border: none;
-  width: 90%;
-  border-radius: 4px;
-  padding: 10px 20px;
-  margin: 10px;
-  transition: background-color 0.3s;
-}
-
-.card-footer button:hover {
-  background-color: #2c2a2a;
-  color: aliceblue;/* Change the background color on hover */
-}
-
-/* Adjust the icon color */
-.material-icons {
-  color: rgb(0, 0, 0);
-}
-.material-icons:hover{
-
-  color: rgb(255, 255, 255);
-}
-
-/* If you want to remove the default button padding and border, you can add the following: */
-.card-footer button {
-  padding: 0; /* Remove default padding */
-  border: none; /* Remove default border */
-  outline: none; /* Remove outline on focus */
-}
-
-/* Styles for the map */
-#map {
-  /* Add styles for the map container */
-  height: 200px; /* Set the height as needed */
-  border: 1px solid #131212;
-  margin-top: 10px;
-  border-radius: 8px;
-  width: 90%;
-}
-
-/* Styles for the buttons */
-.material-icons {
+/* Encabezado */
+h2 {
   font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+
+/* Mapa */
+.map-container {
+  width: 97.5%;
+  height: 100%;
+  margin: 40px auto; /* Centrar horizontalmente */
+  flex-direction: column;
+  justify-content: center; /* Centrar verticalmente */
+  align-items: center; /* Centrar horizontalmente */
+  margin-left: 45px;
+}
+
+.mostrar-mapa-button {
+  display: inline-flex !important;
+  border-radius: 24px !important;
+  border: 1px solid rgba(0, 0, 0, 0.08) !important;
+  margin: 0px !important;
+  padding: 14px 19px !important;
+  touch-action: manipulation !important;
+  align-items: center !important;
+  justify-content: center !important;
+  box-shadow: none !important;
+  background: rgb(34, 34, 34) !important;
+  color: white;
+  position: fixed;
+  left: 53%;
+  bottom: 20px;
+  z-index: 1000; /* Ajusta el valor según sea necesario para que esté por encima del mapa */
+}
+
+/* Resto de tus estilos */
+
+.mostrar-mapa-button mat-icon {
+  margin-left: 8px;
+}
+
+.mostrar-mapa-button:hover {
+  transform: scale(1.05);
+  transition: 0.3s;
+  cursor: pointer;
 }
