--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/listar-usuario-localizaciones/listar-usuario-localizaciones.component.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <app-navbar-administrador></app-navbar-administrador>
-    <div>
-      <h2 style="text-align: center">LISTA DE LOCALIZACIONES</h2>
-    </div>
-    <div class="container">
-      <div class="card-container">
-        <div class="card" *ngFor="let element of dataSource.data">
-          <div class="card-header">
-            {{ element.idLocalizacion }}
-          </div>
-          <div class="card-body">
-            <p>Dirección: {{ element.direccion }}</p>
-            <p>Distrito: {{ element.distrito }}</p>
-            <p>Región: {{ element.region }}</p>
-            <p>Referencia: {{ element.referencia }}</p>
-            <p>Latitud: {{ element.latitud }}</p>
-            <p>Longitud: {{ element.longitud }}</p>
-          </div>
-          <div id="map{{ element.idLocalizacion }}" style="height: 200px"></div>
-          <div class="card-footer"></div>
-        </div>
-      </div>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Imports para los iconos del mapa -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
+  <title>Buscar Localización</title>
+  <link rel="stylesheet" href="listar-usuario-localizaciones.component.css" />
+</head>
+
+<body>
+  <app-navbar-administrador></app-navbar-administrador>
+
+
+  <div id="map" class="map-container"></div>
+  <button class="mostrar-mapa-button"
+  [routerLink]="['/components/estacionamiento/listar_usuario_estacionamientos']">Volver a Lista<mat-icon>list</mat-icon>
+</button>
+  
+</body>
+
 </html>
