--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/creaedita-localizaciones/creaedita-localizaciones.component.html
@@ -12,9 +12,10 @@
       href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css"
     />
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <title>Registrar Localización</title>
   </head>
-
   <body>
     <app-navbar-administrador></app-navbar-administrador>
 
@@ -60,10 +61,11 @@
         <mat-form-field class="example-full-width">
           <mat-label>Dirección</mat-label>
           <input matInput placeholder="Dirección" formControlName="direccion" />
-          <mat-error
-            *ngIf="obtenerControlCampo('direccion')?.errors?.['required']"
-          >
-            El campo es obligatorio.
+          <mat-error *ngIf="form.get('direccion')?.invalid">
+            {{
+              form.get('direccion')!.errors?.['required'] ? 'La dirección es obligatorio' :
+              (form.get('direccion')!.errors?.['maxlength'] ? 'No puede tener más de 50 caracteres' :'')
+            }}
           </mat-error>
         </mat-form-field>
 
@@ -75,10 +77,11 @@
             placeholder="Referencia"
             formControlName="referencia"
           />
-          <mat-error
-            *ngIf="obtenerControlCampo('referencia')?.errors?.['required']"
-          >
-            El campo es obligatorio.
+          <mat-error *ngIf="form.get('referencia')?.invalid">
+            {{
+              form.get('referencia')!.errors?.['required'] ? 'La referencia es obligatorio' :
+              (form.get('referencia')!.errors?.['maxlength'] ? 'No puede tener más de 50 caracteres' :'')
+            }}
           </mat-error>
         </mat-form-field>
         <h2>SELECCIONE TU UBICACION EN EL MAPA</h2>
@@ -86,102 +89,39 @@
         <div class="longitudes">
           <!-- Latitud sección -->
           <mat-form-field class="example-full-width">
-            <mat-label>Región</mat-label>
-            <mat-select matInput placeholder="Región" formControlName="region">
-              <mat-option *ngFor="let p of provinciasLima" [value]="p.value">
-                {{ p.viewValue }}
-              </mat-option>
-            </mat-select>
-            <mat-error
-              *ngIf="obtenerControlCampo('region')?.errors?.['required']"
-            >
-              La region/provincia es obligatoria.
-            </mat-error>
-          </mat-form-field>
-
-          <!-- Distrito sección -->
-
-          <mat-form-field class="example-full-width">
-            <mat-label>Distrito</mat-label>
-            <mat-select
-              matInput
-              placeholder="Distrito"
-              formControlName="distrito"
-            >
-              <mat-option *ngFor="let p of distritosLima" [value]="p.value">
-                {{ p.viewValue }}
-              </mat-option>
-            </mat-select>
-            <mat-error
-              *ngIf="obtenerControlCampo('distrito')?.errors?.['required']"
-            >
-              La disponibilidad es obligatoria.
-            </mat-error>
-          </mat-form-field>
-          <!-- Dirección sección -->
-          <mat-form-field class="example-full-width">
-            <mat-label>Dirección</mat-label>
+            <mat-label>Latitud</mat-label>
             <input
               matInput
-              placeholder="Dirección"
-              formControlName="direccion"
+              placeholder="Latitud"
+              formControlName="latitud"
+              readonly="true"
             />
-            <mat-error *ngIf="form.get('direccion')?.invalid">
-              {{
-              form.get('direccion')!.errors?.['required'] ? 'La dirección es obligatoria' :
-              (form.get('direccion')!.errors?.['maxlength'] ? 'No puede tener más de 50 caracteres' :'')
-              }}
+            <mat-error
+              *ngIf="obtenerControlCampo('latitud')?.errors?.['required']"
+            >
+              El campo es obligatorio.
             </mat-error>
           </mat-form-field>
           <!-- Longitud sección -->
           <mat-form-field class="example-full-width">
-            <mat-label>Referencia</mat-label>
+            <mat-label>Longitud</mat-label>
             <input
               matInput
-              placeholder="Referencia"
-              formControlName="referencia"
+              placeholder="Longitud"
+              formControlName="longitud"
+              readonly="true"
             />
-            <mat-error *ngIf="form.get('referencia')?.invalid">
-              {{
-              form.get('referencia')!.errors?.['required'] ? 'La referencia es obligatorio' :
-              (form.get('referencia')!.errors?.['maxlength'] ? 'No puede tener más de 50 caracteres' :'')
-              }}
+            <mat-error
+              *ngIf="obtenerControlCampo('longitud')?.errors?.['required']"
+            >
+              El campo es obligatorio.
             </mat-error>
           </mat-form-field>
-          <h2>SELECCIONE TU UBICACION EN EL MAPA</h2>
+        </div>
 
-          <div class="longitudes">
-            <!-- Latitud sección -->
-            <mat-form-field class="example-full-width">
-              <mat-label>Latitud</mat-label>
-              <input
-                matInput
-                placeholder="Latitud"
-                formControlName="latitud"
-                readonly="true"
-              />
-              <mat-error
-                *ngIf="obtenerControlCampo('latitud')?.errors?.['required']"
-              >
-                El campo es obligatorio.
-              </mat-error>
-            </mat-form-field>
-            <!-- Longitud sección -->
-            <mat-form-field class="example-full-width">
-              <mat-label>Longitud</mat-label>
-              <input
-                matInput
-                placeholder="Longitud"
-                formControlName="longitud"
-                readonly="true"
-              />
-              <mat-error
-                *ngIf="obtenerControlCampo('longitud')?.errors?.['required']"
-              >
-                El campo es obligatorio.
-              </mat-error>
-            </mat-form-field>
-          </div>
+        <div id="map" style="height: 400px"></div>
+        <div class="btn-container">
+          <button mat-raised-button color="primary">Registrar</button>
         </div>
       </form>
     </div>
