--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-usuario-estacionamiento/listar-usuario-estacionamiento.component.css
@@ -3,9 +3,12 @@ body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #11998e, #38ef7d);
     margin-left: 270px;
+    height: auto;
 
 }
-
+.header{
+padding: 50px;
+}
 h2 {
     text-align: center;
 }
@@ -13,7 +16,7 @@ h2 {
 .estacionamientos-container {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 155px;
+    margin-left: 145px;
 }
 
 .estacionamiento-card {
