--- a/SAFE_PARKING_FRONT/src/app/components/profile/profile.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/profile/profile.component.css
@@ -1,69 +1,68 @@
 body {
-  font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
-  margin-left: 250px;
   padding: 30px;
+  margin-left: 250px;
 }
 
-header {
-  background-color: #0077b5;
-  color: white;
+.container {
+  max-width: 600px;
+  margin: 50px auto;
+  background-color: #fff;
   padding: 20px;
-  text-align: center;
-}
-
-section {
-  max-width: 800px;
-  margin: 20px auto;
-  background-color: white;
-  padding: 20px;
-  border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+.responsive-img {
+  max-width: 100%;
+  height: auto;
+  max-height: 200px; /* Set a maximum height if needed */
 }
 
-.profile-picture {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
+.card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
   overflow: hidden;
-  margin: 0 auto 20px;
 }
 
-.profile-picture img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.user-info {
+.card-header {
+  background-color: #070707;
+  color: #fff;
   text-align: center;
+  padding: 10px;
 }
 
-h1 {
-  margin: 0;
+.card-body {
+  padding: 20px;
+}
+.row{
+  display: flex;
+}
+.card-footer {
+  background: linear-gradient(to right, #11998e, #38ef7d);
+  text-align: center;
+  padding: 10px;
 }
 
-p {
-  margin: 10px 0;
-  color: #666;
+img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin: 10px;
 }
 
-.skills {
-  margin-top: 20px;
-}
-
-.skills ul {
+ul {
   list-style: none;
   padding: 0;
-  display: flex;
-  justify-content: center;
 }
 
-.skills li {
-  margin: 0 10px;
-  padding: 8px 12px;
-  background-color: #0077b5;
-  color: white;
-  border-radius: 4px;
+li {
+  margin-bottom: 10px;
 }
 
+strong {
+  margin-right: 5px;
+}
+
+small {
+  color: #555;
+}
